{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 102,
  "lineage": "c289c7ac-4771-18c9-f566-10521e870f2d",
  "resources": [
    {
      "module": "module.aws_instnce_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "snehil-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:728693718523:instance/i-0b8ab6bec1d10b46c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8ab6bec1d10b46c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "snehil-instance-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e5ce5fb15ddadee",
            "private_dns": "ip-10-0-1-163.ec2.internal",
            "private_ip": "10.0.1.163",
            "public_ip": "3.82.219.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04e1320a54cafa772",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c0e6b414e70715e0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059022f92244a0abd",
            "tags": {
              "Name": "snehil-public-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0e6b414e70715e0"
            ]
          },
          "dependencies": [
            "module.network_layer.aws_security_group.snehil-instance-security-group",
            "module.network_layer.aws_subnet.snehil-public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "snehil-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b6168b26de37b0ef",
            "owner_id": "728693718523",
            "tags": {
              "Name": "snehil-internet-gateway"
            },
            "vpc_id": "vpc-050cce6341e7c7d46"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.snehil-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "snehil-public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c1bbc80492d1ecc6",
            "owner_id": "728693718523",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6168b26de37b0ef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "snehil-public-route-table"
            },
            "vpc_id": "vpc-050cce6341e7c7d46"
          },
          "dependencies": [
            "module.network_layer.aws_internet_gateway.snehil-internet-gateway",
            "module.network_layer.aws_vpc.snehil-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "snehil-route-table-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daa7a5fd18474219",
            "route_table_id": "rtb-0c1bbc80492d1ecc6",
            "subnet_id": "subnet-059022f92244a0abd"
          },
          "dependencies": [
            "module.network_layer.aws_internet_gateway.snehil-internet-gateway",
            "module.network_layer.aws_route_table.snehil-public-route-table",
            "module.network_layer.aws_subnet.snehil-public-subnet",
            "module.network_layer.aws_vpc.snehil-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "snehil-instance-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728693718523:security-group/sg-0c0e6b414e70715e0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c0e6b414e70715e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 port for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 port for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 port for https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.43.139/32"
                ],
                "description": "Allow 22 port for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.43.139/32"
                ],
                "description": "Allow 80 port for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.43.139/32"
                ],
                "description": "Allow 80 port for https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "snehil-instance-security-sg",
            "name_prefix": null,
            "owner_id": "728693718523",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-050cce6341e7c7d46"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.snehil-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snehil-private-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728693718523:subnet/subnet-0b116d9a9bba50868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b116d9a9bba50868",
            "map_public_ip_on_launch": false,
            "owner_id": "728693718523",
            "tags": {
              "Name": "snehil-us-east-1a-10.0.2.0/24-private-subnet"
            },
            "vpc_id": "vpc-050cce6341e7c7d46"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.snehil-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snehil-public-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728693718523:subnet/subnet-059022f92244a0abd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-059022f92244a0abd",
            "map_public_ip_on_launch": true,
            "owner_id": "728693718523",
            "tags": {
              "Name": "snehil-us-east-1a-10.0.1.0/24-public-subnet"
            },
            "vpc_id": "vpc-050cce6341e7c7d46"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.snehil-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "snehil-vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728693718523:vpc/vpc-050cce6341e7c7d46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072305c42ffef28a7",
            "default_route_table_id": "rtb-0984a17bdd0afc3c1",
            "default_security_group_id": "sg-08b61a261a4e74066",
            "dhcp_options_id": "dopt-6f893515",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-050cce6341e7c7d46",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0984a17bdd0afc3c1",
            "owner_id": "728693718523",
            "tags": {
              "Name": "snehil-vpc"
            }
          }
        }
      ]
    }
  ]
}